fix(diary) MCDT-360 Fix align text and header from different workflow

--- a/src/main/resources/public/sass/global/components/_atomic.scss
+++ b/src/main/resources/public/sass/global/components/_atomic.scss
@@ -229,18 +229,33 @@
 .padding-bottom-md {
   padding-bottom: 10px;
 }
+
+.padding-bottom-lg {
+  padding-bottom: 16px;
+}
+
 .padding-top-md {
   padding-top: 10px;
 }
+
 .padding-left-md {
   padding-left: 10px !important;
 }
+
+.padding-left-xlg {
+  padding-left: 24px;
+}
+
 .padding-right-md {
   padding-right: 10px;
 }
 
 .padding-right-lg {
   padding-right: 20px;
+}
+
+.padding-right-xlg {
+  padding-right: 24px;
 }
 
 .padding-bottom-list {
