--- a/src/main/resources/public/sass/global/components/_main.scss
+++ b/src/main/resources/public/sass/global/components/_main.scss
@@ -99,7 +99,8 @@ h1 {
   font-weight: bold;
   margin-bottom: 0;
   margin-top: 0;
-  line-height: 0;
+  line-height: 40px;
+  font-size: 36px;
   color: $black;
 }
 
